# somesy

./: .coveragerc  .gcloudignore  .gitignore  CLAUDE.md  README.md  linkedin.py  main.py  main_local.py  main_test.py  pyproject.toml  requirements-test.txt  requirements.txt  slackc.py  sync.py
.github/workflows/: lint.yml  test.yml
scripts/: install-hooks.sh
scripts/hooks/: pre-commit.sh  pre-push.sh
tests/: test_linkedin.py  test_main.py  test_slackc.py  test_sync.py
